webapp-networking/src/kubernetes/overlays/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-net
spec:
  selector:
    app: webapp-net
    tier: dev
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
