webapp-networking/src/kubernetes/overlays/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntnx-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
    nginx.ingress.kubernetes.io/app-root: /ui/
    nginx.ingress.kubernetes.io/proxy-body-size: "200M"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1500"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3000"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
spec:
  ingressClassName: nginx
  rules:
    - host: nke-training.nutanix.com
      http:
        paths:
          - pathType: Prefix
            path: /api/(|$)(.*)
            backend:
              service:
                name: webapp-net
                port:
                  number: 8080
          - pathType: Prefix
            path: /ui/(|$)(.*)
            backend:
              service:
                name: nginx
                port:
                  number: 80
